hphp/hack/test/typecheck/reactive/references_in_rx2.php.exp
File "references_in_rx2.php", line 6, characters 8-10:
References are not allowed in reactive code. (Naming[2088])
