hphp/hack/test/typecheck/reactive/references_in_rx2.php
<?hh

<<__Rx>>
function foo(): void {
  $x = 1;
  $y = &$x; // bad
}
